--- a/env.template
+++ b/env.template
@@ -10,6 +10,9 @@ MQTT_PASS=s3cr3t
 # Prefix for the published messages
 MQTT_TOPIC_PREFIX=tele
 
+# Exclude these topics (blacklist, comma-separated)
+TOPICS_BLACKLIST=/R3mn8U/xxxxxxx/log
+
 # Period in seconds to wait before publishing MQTT messages
 PUBLISH_PERIOD_SECONDS=30
 
