--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,12 @@ pytest-sugar = "^1.0.0"
 pytest-clarity = "*"
 pytest-icdiff = "*"
 
+[tool.poetry.group.lab]
+optional = true
+
+[tool.poetry.group.lab.dependencies]
+jupyter = "^1.1.1"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
